Bug 1267844 - Make swapping render frames swap update observers too. r=mconley